# xhello

./: CMakeLists.txt  CMakePresets.json  README.md  configuration.yaml  meson.build  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/xhello/: MainActivity.kt
client/: CMakeLists.txt  config.toml  configuration.yaml  main.cpp  meson.build
client/configuration/: CMakeLists.txt  configuration.cpp  configuration.cppm
configuration/: CMakeLists.txt  configuration.cpp  configuration.cppm
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
protos/: meson.build
rpc/: CMakeLists.txt  client.cpp  client.cppm  rpc.cppm  server.cpp  server.cppm  xhello.proto
server/: CMakeLists.txt  config.toml  main.cpp  meson.build
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
